🐛 Fix cards alignment + home first container height

--- a/src/app/home/Hero/Hero.module.scss
+++ b/src/app/home/Hero/Hero.module.scss
@@ -3,7 +3,7 @@
 .container {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 170vh;
   padding-top: $layout-desktop-navigation-height;
   z-index: $index-section-content;
 
